test/fails/bad_types/arr_constant2.lgl
void main() {
    print [[1., 2.], [1.]]; //Must have same number of columns across rows
}
